fixed overflow

--- a/website/start-style.css
+++ b/website/start-style.css
@@ -21,6 +21,7 @@ body,html{
     margin: 0;
     padding: 0;
     background: white !important;
+    overflow:hidden;
     }
 
     .searchbar{
